# Raw-Alchemy

./: .gitignore  README.md  README_zh-CN.md  RawAlchemy-onedir.spec  RawAlchemy.spec  build_nuitka.py  build_nuitka_debug.py  pyproject.toml  setup.py
.github/workflows/: release.yml
src/raw_alchemy/: __init__.py  config.py  core.py  crash_handler.py  file_io.py  gui.py  i18n.py  lensfun_wrapper.py  logger.py  main.py  math_ops.py  metering.py  orchestrator.py  preview.py  utils.py
src/raw_alchemy/locales/: en.json  zh.json
src/raw_alchemy/pipeline/: cache_manager.py  processor.py  request.py  state.py
src/raw_alchemy/ui/: main_window.py
src/raw_alchemy/ui/widgets/: about_panel.py  crop_rotate_viewer.py  gallery_item.py  help_panel.py  histogram.py  inspector_panel.py  perspective_viewer.py  settings_panel.py  title_bar.py  waveform.py
src/raw_alchemy/workers/: thumbnail_worker.py  version_worker.py
